{
    "name": "TestInputAction",
    "maps": [
        {
            "name": "TestActionMap",
            "id": "a43b5c2f-f1b8-493a-a81f-a7f111da78fe",
            "actions": [
                {
                    "name": "ScreenTouch",
                    "type": "Button",
                    "id": "b347664f-cfdf-4dd3-92c5-02b2dd14fc80",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScreenTouchPosition",
                    "type": "Value",
                    "id": "bd70ee55-cd0b-447d-b8ac-281edec082f3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "BackButton",
                    "type": "Button",
                    "id": "b9e30621-d285-4f01-a6eb-6243b11f352b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "64e7e0a9-4678-43d4-bc5d-1a1b5c1d96a8",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "860c77a5-731d-4bb1-ad76-ef5c3ece9864",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8df12250-b5bb-406e-81a0-4290ad739776",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "088ee652-102c-4904-b202-06f34f78a812",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf988f86-eaed-4de6-80de-d78e52913e4e",
                    "path": "*/{Back}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}